<resources>
    <string name="app_name">Orders</string>

    <!-- Login Screen-->
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="restaurant">Restaurant</string>
    <string name="list" translatable="false">List</string>
    <string name="grid" translatable="false">Grid</string>
    <string name="title_activity_order">Map</string>

    <!-- Order Screen-->
    <string name="order_details">Order Details</string>
    <string name="order_direction">Order Direction</string>
    <string name="close">Close</string>
    <string name="order_name">Name : %1$s</string>
    <string name="order_quantity">Quantity : %1$s</string>
    <string name="order_price">Price : %1$s EGP</string>
</resources>
